--- a/Netflix.html
+++ b/Netflix.html
@@ -73,7 +73,7 @@
                 <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
             </div>
             <div class="vdo3">
-                <img src="/device-pile-in.png" alt="TV">
+                <img src="device-pile-in.png" alt="TV">
                 <video src="video-devices-in.m4v" autoplay loop muted></video>
             </div>
         </section>
